<resources>
    <string name="app_name">TestProject</string>
    <string name="login">login</string>
    <string name="profilepic">profile pic</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="ocupation">Occupation</string>
    <string name="edit">Edit Profile</string>
    <string name="update">update</string>
    <string name="email">Email Id</string>
    <string name="register">Register</string>
    <string name="pas">Password</string>
</resources>
