<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profilepic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/linear1"
            app:srcCompat="@android:drawable/sym_def_app_icon"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="42dp" />

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintLeft_toRightOf="@+id/imageView1"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/textViewN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintLeft_toRightOf="@+id/imageView1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear2"
                tools:layout_editor_absoluteX="188dp"
                tools:layout_editor_absoluteY="42dp" />

            <TextView
                android:id="@+id/textViewC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                app:layout_constraintLeft_toRightOf="@+id/imageView1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteX="188dp"
                tools:layout_editor_absoluteY="87dp" />

            <TextView
                android:id="@+id/textViewE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintLeft_toRightOf="@+id/imageView1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textViewO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocupation"
                app:layout_constraintLeft_toRightOf="@+id/imageView1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:layout_editor_absoluteX="188dp"
                tools:layout_editor_absoluteY="139dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                app:layout_constraintLeft_toRightOf="@+id/imageView1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="204dp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>