<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

          <LinearLayout
            android:id="@+id/linear11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="3dp"
                android:contentDescription="@string/profilepic"
                android:src="@drawable/bulbglowing"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/linear21"
                app:layout_constraintTop_toBottomOf="@+id/linear11" />

            <LinearLayout
                android:id="@+id/linear21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                app:layout_constraintLeft_toRightOf="@+id/imageProfile"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear11">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:padding="4dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    app:layout_constraintLeft_toRightOf="@+id/imageProfile"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear21" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:padding="4dp"
                    android:hint="@string/contact"
                    android:inputType="phone"
                    app:layout_constraintLeft_toRightOf="@+id/imageProfile"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear21"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:padding="4dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintLeft_toRightOf="@+id/imageProfile"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear21"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:padding="4dp"
                    android:hint="@string/ocupation"
                    android:inputType="text"
                    app:layout_constraintLeft_toRightOf="@+id/imageProfile"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear21" />

                <Button
                    android:id="@+id/btnsave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:padding="4dp"
                    android:background="@drawable/button1"
                    app:layout_constraintLeft_toRightOf="@+id/imageProfile"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear21" />
            </LinearLayout>

        </LinearLayout>

</android.support.constraint.ConstraintLayout>