<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editTextU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="4dp"
                android:hint="@string/name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="48dp" />

            <EditText
                android:id="@+id/editTextP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="4dp"
                android:hint="@string/pas"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextU"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="167dp" />

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/button1"
                android:padding="4dp"
                android:text="@string/login"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextP"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="254dp" />

            <Button
                android:id="@+id/buttonReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button1"
                android:padding="6dp"
                android:text="@string/register"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnlogin"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="234dp" />

        </LinearLayout>


</android.support.constraint.ConstraintLayout>